--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"vite\" \"nodemon ../server/server.js\""
+    "dev": "concurrently \"vite\" \"nodemon ../server/server.js\"",
+    "clean": "rimraf node_modules package-lock.json"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
     "concurrently": "^9.2.1",
+    "rimraf": "^6.1.0",
     "vite": "^6.4.1"
   }
 }
