--- a/server/package.json
+++ b/server/package.json
@@ -38,8 +38,8 @@
     "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.4",
+    "multer": "^2.0.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "multer": "^2.0.2"
+    "swagger-ui-express": "^5.0.1"
   }
 }
